tdf#67943 tabs must have radio button role and tab button subrole

Also, reimplement -[AquaA11yWrapper tabsAttribute] to return children
for tab bars. This will cause VoiceOver to announce that the currently
selected tab is "X of Y" tabs in the tab bar.

Change-Id: I2c3b890fd445c22842b90d60170a71e4e8aa91ff
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170389
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit c2061f21b1a88c9692a4e081280ed2c52e0b9141)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170358